--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="example_result">list mark</string>
 
 
+    <string name="time_ago"> Hace </string>
+    <string name="time_secouds"> s </string>
+    <string name="time_minute"> m </string>
+    <string name="time_hour"> Hora </string>
+    <string name="time_yesterday">Ayer</string>
 </resources>
