--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="delete">Eliminar</string>
     <string name="edit">Editar</string>
     <string name="description_image">Description Image</string>
+    <string name="notice">Novedades</string>
     
     <!--TEXT EXAMPLE-->
     <string name="lorem_text">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
@@ -30,6 +31,8 @@
     <string name="sign_in">Inicio de sesión</string>
     <string name="sign_up">Registrarse</string>
     <string name="example_result">list mark</string>
+    <string name="example_title_notice">Mañana tienes reunion a las 4</string>
+    <string name="example_description_notice">El dia 16 de Septiembre hay una reunion a las 6:00 PM.</string>
 
 
     <string name="time_ago"> Hace </string>
